//
//  AccessID.swift
//  ImageFeed
//
//  Created by Matthew on 15.04.2025.
//

import Foundation

enum AccessID {
    static let authLoginButton = "Authenticate"
    static let profileLogoutButton = "LogoutButton"
    static let cellLikeButton = "CellLikeButton"
    static let singleImageLikeButton = "SingleImageLikeButton"
    static let singleImageBackButton = "SingleImageBackButton"
    static let authWebView = "AuthWebView"
}
